--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>28.02.2020р.Б.</title>
+	<title>© sovainua</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
